--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,9 @@
 # This file lists all individuals having contributed content to the repository.
 
+Onuora Chidimma Blessing
+Ugoo-Okonkwo Stella Ozioma
+
 
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
-Joann Vuong <130@holbertonschool.com> 
+Joann Vuong <130@holbertonschool.com>
